# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  pyproject.toml~
brain_games/: cli.py  game_logic.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
